--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,15 +2,17 @@
 <html>
   <head>
     <title>{{title}}</title>
+    {{!-- Front end frameworks and scripts --}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="/animate.css/animate.min.css">
-      <link rel="stylesheet" href="/xel/stylesheets/material.theme.css">
-      <link rel="stylesheet" href="/stylesheets/style.css">
-      <script src="/jquery/dist/jquery.min.js"></script>
-      <script src="/angular/angular.min.js"></script>
+    <link rel="stylesheet" href="/animate.css/animate.min.css">
+    <link rel="stylesheet" href="/xel/stylesheets/material.theme.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/angular/angular.min.js"></script>
 
-      <!--Custom sections for each view-->
-      {{{_sections.head}}}
+    <!--Custom sections for each view-->
+    {{{_sections.head}}}
   </head>
   <body>
     {{{body}}}
