--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
             <h1 class="text-center login-title">Sign in</h1>
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-                <form class="form-signin" method="POST" action = "/users/login">
+                <form class="form-signin" method="POST" action = "/users/login" enctype="application/x-www-form-urlencoded">
                     <input type="text" class="form-control" placeholder="Username" name="username" id="userName" required autofocus>
                     <input type="password" class="form-control" placeholder="Password" name = "password" id="pass" required>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
