--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,18 +1,22 @@
+{{#section 'head'}}
+    <link rel="stylesheet" href="/stylesheets/login.css">
+{{/section}}
+
 <div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-md-offset-4">
-            <h1 class="text-center login-title">Sign in</h1>
-            <div class="account-wall">
-                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-                <form class="form-signin" method="POST" action = "/users/login" enctype="application/x-www-form-urlencoded">
-                    <input type="text" class="form-control" placeholder="Username" name="username" id="userName" required autofocus>
-                    <input type="password" class="form-control" placeholder="Password" name = "password" id="pass" required>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                    <label class="checkbox pull-left"><input type="checkbox" value="remember-me">Remember me</label>
-                    <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
-                </form>
-            </div>
-            <a href="#" class="text-center new-account">Create an account </a>
+    <form class="form-signin" method="POST" action = "/users/login" enctype="application/x-www-form-urlencoded">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="usernm" class="sr-only">Email address</label>
+        <input type="text" id="usernm" class="form-control" name="username" placeholder="Username" required autofocus>
+        <label for="pass" class="sr-only">Password</label>
+        <input type="password" id="pass" class="form-control" name="password" placeholder="Password" required>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
         </div>
-    </div>
-</div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+</div> <!-- /container -->
+
+
+
