--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,32 +1,43 @@
-<!-- Sidebar -->
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#">
-               School Project
-            </a>
+<nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
         </li>
-        <li>
-            <a href="#">Dashboard</a>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Reports</a>
         </li>
-        <li>
-            <a href="#">Shortcuts</a>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Analytics</a>
         </li>
-        <li>
-            <a href="#">Overview</a>
-        </li>
-        <li>
-            <a href="#">Events</a>
-        </li>
-        <li>
-            <a href="#">About</a>
-        </li>
-        <li>
-            <a href="#">Services</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Export</a>
         </li>
     </ul>
-</div>
-<!-- /#sidebar-wrapper -->
+
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Nav item</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Nav item again</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">One more nav</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Another nav item</a>
+        </li>
+    </ul>
+
+    <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Nav item again</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">One more nav</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Another nav item</a>
+        </li>
+    </ul>
+</nav>
