--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,6 +21,7 @@
     </div>
 </div>
 
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/angular/angular.min.js"></script>
 
