--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -4,7 +4,7 @@
             <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Reports</a>
+            <a class="nav-link" href="/users/signup">Add a user</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Analytics</a>
