"Javascript promises successfully added. Thanks to Darshana."

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,5 +29,7 @@
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/angular/angular.min.js"></script>
 
+    {{_sections.scripts}}
+
 </body>
 </html>
