--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -1,4 +1,4 @@
-<!--MOE OFFICER'S PAGE-->
+<!--SCHOOL CLERK'S PAGE-->
 
 <div class="row">
 
@@ -9,19 +9,16 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/users/signup">Add a user</a>
+                <a class="nav-link" href="#">Enter Applicant Details</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Register new schools</a>
+                <a class="nav-link" href="#">Interview Letters</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Remove Schools</a>
+                <a class="nav-link" href="#">School Qualified Letters</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Update School Details</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Declare Grading Criteria</a>
+                <a class="nav-link" href="#">Old Students Details</a>
             </li>
         </ul>
     </nav>
@@ -29,7 +26,7 @@
 
     <!--Main page content-->
     <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-        <div class="jumbotron" >
+        <div class="jumbotron">
             <div class="container">
                 <h1 style="text-align: center">Welcome, {{username}}</h1>
                 <small><p style="text-align: center">Grade One Entry Management System</p></small>
