--- a/views/users/moe_officer.hbs
+++ b/views/users/moe_officer.hbs
@@ -1,4 +1,4 @@
-<!--PRINCIPAL'S PAGE-->
+<!--MOE OFFICER'S PAGE-->
 
 <div class="row">
 
@@ -9,13 +9,19 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/users/signup">Add school users</a>
+                <a class="nav-link" href="#">Add a user</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Interview Qualified List</a>
+                <a class="nav-link" href="#">Register new schools</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Final Qualified List</a>
+                <a class="nav-link" href="#">Remove Schools</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Update School Details</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Declare Grading Criteria</a>
             </li>
         </ul>
     </nav>
@@ -23,7 +29,7 @@
 
     <!--Main page content-->
     <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-        <div class="jumbotron">
+        <div class="jumbotron" >
             <div class="container">
                 <h1 style="text-align: center">Welcome, {{username}}</h1>
                 <small><p style="text-align: center">Grade One Entry Management System</p></small>
