--- a/views/users/pcpl.hbs
+++ b/views/users/pcpl.hbs
@@ -1,4 +1,4 @@
-<!--SCHOOL CLERK'S PAGE-->
+<!--PRINCIPAL'S PAGE-->
 
 <div class="row">
 
@@ -9,16 +9,13 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/users/signup">Enter Applicant Details</a>
+                <a class="nav-link" href="#">Add school users</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Interview Letters</a>
+                <a class="nav-link" href="#">Interview Qualified List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">School Qualified Letters</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Old Students Details</a>
+                <a class="nav-link" href="#">Final Qualified List</a>
             </li>
         </ul>
     </nav>
