"Guardian model implemented. Guardian form added. Have to do the front end UI development."

--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Enter Applicant Details</a>
+                <a class="nav-link" href="/guardian_details">Enter Applicant Details</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Interview Letters</a>
@@ -25,7 +25,7 @@
     <!--/ Navbar-->
 
     <!--Main page content-->
-    <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+    <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3 animated fadeIn">
         <div class="jumbotron">
             <div class="container">
                 <h1 style="text-align: center">Welcome, {{username}}</h1>
