--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -1,82 +1,97 @@
 <span align="center">
     <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
-        <form>
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
-            </div>
+        <form action="../../includes/guardian_details_handler.php" method="post">
+    <div class="form-group">
+        <label for="guardian_nic" class="left">NIC No:</label>
+        <input type="number" class="form-control" name="guardian_nic">
+    </div>
+    <div class="form-group">
+        <label for="first_name" class="left">First Name:</label>
+        <input type="text" class="form-control" name="first_name">
+    </div>
+    <div class="form-group">
+        <label for="last_name">Last Name:</label>
+        <input type="text" class="form-control" name="last_name">
+    </div>
+    <div class="form-group">
+        <label for="dob">Date of Birth:</label>
+        <input type="date" class="form-control" name="dob">
+    </div>
+    <div class="form-group">
+        <label for="nationality"> Nationality </label>
+        <div class="dropdown" id="nationality">
+            <select id="input_3" name="nationality"  data-component="dropdown">
+                <option value="">Select Nationality  </option>
+                <option value="Afghan"> Afghan </option>
+            </select>
+        </div>
+    </div>
+    <label for="religion"> Religion </label>
+    <div class="dropdown" id="religion">
+        <select id="input_3" name="religion"  data-component="dropdown">
+            <option value="Buddhist"> Buddhist </option>
+            <option value="Christian"> Christian</option>
+            <option value="Islam"> Islam </option>
+            <option value="Hindu"> Hindu </option>
+            <option value="Other"> Other </option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="gender"> Gender </label>
+        <div class="dropdown" id="gender">
+            <select id="input_3" name="gender"  data-component="dropdown">
+                <option value="Male"> Male </option>
+                <option value="Female"> Female</option>
+                <option value="Other"> Other </option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="home_number" class="left">Home No:</label>
+        <input type="number" class="form-control" name="home_number">
+    </div>
+    <div class="form-group">
+        <label for="street" class="left">Street:</label>
+        <input type="text" class="form-control" name="street">
+    </div>
+    <div class="form-group">
+        <label for="town" class="left">Town:</label>
+        <input type="text" class="form-control" name="town">
+    </div>
+    <div class="form-group">
+        <label for="city" class="left">City:</label>
+        <input type="text" class="form-control" name="city">
+    </div>
+    <div class="form-group">
+        <label for="district" class="left">District:</label>
+        <input type="text" class="form-control" name="district">
+    </div>
+    <div class="form-group">
+        <label for="province" class="left">Province:</label>
+        <input type="text" class="form-control" name="province">
+    </div>
+    <div class="form-group">
+        <label for="divisional_secretary_area" class="left">Divisional Secretary Area:</label>
+        <input type="text" class="form-control" name="divisional_secretary_area">
+    </div>
+    <div class="form-group">
+        <label for="grama_niladhari_division" class="left">Grama Niladhari Division:</label>
+        <input type="text" class="form-control" name="grama_niladhari_division">
+    </div>
+    <div class="form-group">
+        <label for="occupation" class="left">Occupation:</label>
+        <input type="text" class="form-control" name="occupation">
+    </div>
+    <label for="civil_status">Civil Status </label>
+    <div class="dropdown" id="civil_status">
+        <select id="civil_status" name="civil_status"  data-component="dropdown">
+            <option value="married">Married </option>
+            <option value="unmarried">unmarried</option>
+        </select>
+    </div>
+    <button type="Submit" class="btn btn-default">Submit</button>
+</form>
             <span align="center"><button type="submit" class="btn btn-default">Submit</button></span>
-    </form>
+        </form>
     </div>
 </span>
