--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -1,6 +1,6 @@
 <span align="center">
     <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
-        <form action="../../includes/guardian_details_handler.php" method="post">
+        <form action="/guardian_details" method="post">
             <div class="form-group">
                 <label for="guardian_nic" class="left">NIC No:</label>
                 <input type="number" class="form-control" name="guardian_nic">
@@ -36,6 +36,7 @@
                     <option value="Other"> Other </option>
                 </select>
             </div>
+            <br>
             <div class="form-group">
                 <label for="gender"> Gender </label>
                 <div class="dropdown" id="gender">
@@ -89,6 +90,7 @@
                     <option value="unmarried">unmarried</option>
                 </select>
             </div>
+            <br>
             <button type="Submit" class="btn btn-default">Submit</button>
     </form>
     </div>
