--- a/views/users/pcpl.hbs
+++ b/views/users/pcpl.hbs
@@ -2,12 +2,9 @@
 
 <div class="row">
 
-    <!--Navbar-->
+    <!--Sidebar-->
     <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
         <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Add school users</a>
             </li>
@@ -17,9 +14,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Final Qualified List</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="#">Grading Criteria <span class="sr-only">(current)</span></a>
+            </li>
         </ul>
     </nav>
-    <!--/ Navbar-->
+    <!--/ Sidebar-->
 
     <!--Main page content-->
     <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
