--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -14,6 +14,19 @@
         <input type="password" id="pass" class="form-control" name="password" placeholder="Password" required>
         <label for="pass" class="sr-only">Confirm Password</label>
         <input type="password" id="confpass" class="form-control" name="confirmpassword" placeholder="Confirm Password" required>
+        <br>
+        User Role
+        <div class="dropdown" id="religion">
+            <select id="input_3" name="religion"  data-component="dropdown">
+                <option value="moe_officer"> Ministry of Education Officer</option>
+                <option value="school_admin"> School Admin </option>
+                <option value="principal"> Principal </option>
+                <option value="school_clerk"> School Clerk </option>
+            </select>
+        </div>
+        <br>
+
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Add User</button>
     </form>
 </div> <!-- /container -->
