--- a/views/users/moe_officer.hbs
+++ b/views/users/moe_officer.hbs
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Add a user</a>
+                <a class="nav-link" href="/users/signup">Add a user</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Register new schools</a>
