--- a/views/applicant/applicant-details.hbs
+++ b/views/applicant/applicant-details.hbs
@@ -1,1 +1,53 @@
-APPLICANT DETAILS
+<span align="center">
+    <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
+        <form action="/applicant_details" method="post">
+            <div class="form-group">
+                <label for="applicant_id" class="left">ID:</label>
+                <input type="number" class="form-control" name="applicant_id" required>
+            </div>
+            <div class="form-group">
+                <label for="first_name" class="left">First Name:</label>
+                <input type="text" class="form-control" name="first_name" required>
+            </div>
+            <div class="form-group">
+                <label for="last_name">Last Name:</label>
+                <input type="text" class="form-control" name="last_name" required>
+            </div>
+            <div class="form-group">
+                <label for="dob">Date of Birth:</label>
+                <input type="date" class="form-control" name="dob" required>
+            </div>
+            <div class="form-group">
+                <label for="nationality"> Nationality </label>
+                <div class="dropdown" id="nationality">
+                    <select id="input_3" name="nationality"  data-component="dropdown">
+                        <option value="">Select Nationality  </option>
+                        <option value="Afghan"> Afghan </option>
+                    </select>
+                </div>
+            </div>
+            <label for="religion"> Religion </label>
+            <div class="dropdown" id="religion">
+                <select id="input_3" name="religion"  data-component="dropdown">
+                    <option value="Buddhist"> Buddhist </option>
+                    <option value="Christian"> Christian</option>
+                    <option value="Islam"> Islam </option>
+                    <option value="Hindu"> Hindu </option>
+                    <option value="Other"> Other </option>
+                </select>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="gender"> Gender </label>
+                <div class="dropdown" id="gender">
+                    <select id="input_3" name="gender"  data-component="dropdown">
+                        <option value="Male"> Male </option>
+                        <option value="Female"> Female</option>
+                    </select>
+                </div>
+            </div>
+            <br>
+            <button type="Submit" class="btn btn-default">Submit</button>
+    </form>
+    </div>
+</span>
