basic applicant details

--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -41,8 +41,8 @@
                 <label for="gender"> Gender </label>
                 <div class="dropdown" id="gender">
                     <select id="input_3" name="gender"  data-component="dropdown">
-                        <option value="Male"> Male </option>
-                        <option value="Female"> Female</option>
+                        <option value="M"> Male </option>
+                        <option value="F"> Female</option>
                     </select>
                 </div>
             </div>
@@ -85,8 +85,8 @@
             <label for="civil_status">Civil Status </label>
             <div class="dropdown" id="civil_status">
                 <select id="civil_status" name="civil_status"  data-component="dropdown">
-                    <option value="married">Married </option>
-                    <option value="unmarried">unmarried</option>
+                    <option value="M">Married </option>
+                    <option value="U">Unmarried</option>
                 </select>
             </div>
             <br>
