--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,6 +8,10 @@
     <br>
     <form class="form-signin" method="POST" action = "/users/signup" enctype="application/x-www-form-urlencoded">
         <h2 class="form-signin-heading">Add user data</h2>
+        <label for="usernm" class="sr-only">User ID</label>
+        <input type="text" id="userID" class="form-control" name="user_id" placeholder="User ID" required autofocus>
+        <label for="usernm" class="sr-only">Email</label>
+        <input type="text" id="userID" class="form-control" name="email" placeholder="Email" required autofocus>
         <label for="usernm" class="sr-only">Username</label>
         <input type="text" id="usernm" class="form-control" name="username" placeholder="Username" required autofocus>
         <label for="pass" class="sr-only">Password</label>
@@ -17,7 +21,7 @@
         <br>
         User Role
         <div class="dropdown" id="religion">
-            <select id="input_3" name="religion"  data-component="dropdown">
+            <select class="selectpicker" id="input_3" name="user_type"  data-component="dropdown">
                 <option value="moe_officer"> Ministry of Education Officer</option>
                 <option value="school_admin"> School Admin </option>
                 <option value="principal"> Principal </option>
