--- a/views/applicant/applicant-details.hbs
+++ b/views/applicant/applicant-details.hbs
@@ -1,4 +1,7 @@
 <span align="center">
+
+    <h1>Applicant Details</h1>
+
     <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
         <form action="/applicant_details" method="post">
             <div class="form-group">
