--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -1,4 +1,6 @@
 <span align="center">
+
+    <h1>Guardian Details</h1>
     <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
         <form action="/guardian_details" method="post">
             <div class="form-group">
