sri lankan other

--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -24,7 +24,8 @@
                 <div class="dropdown" id="nationality">
                     <select id="input_3" name="nationality"  data-component="dropdown">
                         <option value="">Select Nationality  </option>
-                        <option value="Afghan"> Afghan </option>
+                        <option value="Sri Lankan"> Sri Lankan </option>
+                        <option value="Other"> Other </option>
                     </select>
                 </div>
             </div>
