remove side bar details embedded in the moe_officer and wrote it into a seperte view

--- a/views/users/moe_officer.hbs
+++ b/views/users/moe_officer.hbs
@@ -2,30 +2,7 @@
 
 <div class="row">
 
-    <!--Navbar-->
-    <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-        <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/users/signup">Add a user</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Register new schools</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Remove Schools</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Update School Details</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Declare Grading Criteria</a>
-            </li>
-        </ul>
-    </nav>
-    <!--/ Navbar-->
+   {{>sidebar_moe_officer}}
 
     <!--Main page content-->
     <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
