--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,6 +23,7 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/angular/angular.min.js"></script>
+    <script src="/typeahead/typeahead.js"></script>
 
     {{_sections.scripts}}
 
