--- a/views/applicant/guardian-details.hbs
+++ b/views/applicant/guardian-details.hbs
@@ -6,7 +6,9 @@
             <div class="form-group">
                 <label for="guardian_nic" class="left">NIC No:</label>
                 <input type="number" class="form-control" name="guardian_nic" required>
+
             </div>
+
             <div class="form-group">
                 <label for="first_name" class="left">First Name:</label>
                 <input type="text" class="form-control" name="first_name" required>
@@ -93,7 +95,8 @@
                 </select>
             </div>
             <br>
-            <button type="Submit" class="btn btn-default">Next</button>
+            <button type="Submit" class="btn btn-default" name="next_button">Next</button>
     </form>
     </div>
+
 </span>
