--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -20,6 +20,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Old Students Details</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/view_applicant_details">View Applicant Details</a>
+            </li>
         </ul>
     </nav>
     <!--/ Navbar-->
