Schohool form frontend added.

--- a/views/schools/schoolindex.hbs
+++ b/views/schools/schoolindex.hbs
@@ -56,11 +56,12 @@
             Hindu :
             <input type="text" name="school_hindu"><br/><br/>
 
-            <button type="submit" name = "btn_submit_school">Submit new school</button>
-            <button type="submit" name = "btn_cancel_school">Cancel</button>
+            <button type="submit" class="btn btn-primary" name = "btn_submit_school">Submit new school</button>
+            <button type="submit" class="btn btn-primary" name = "btn_cancel_school">Cancel</button>
 
         </form>
     </main>
     <!--/ Main page content-->
 
 </div>
+<br />
