--- a/views/applicant/view-applicant-details.hbs
+++ b/views/applicant/view-applicant-details.hbs
@@ -1,5 +1,5 @@
 <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
-    <form action="/users/view_applicant" method="post">
+    <form action="/applicant/view_applicant" method="POST">
         <div class="form-group">
             <label for="guardian_nic" class="left">Enter Guardian NIC No:
                 <input type="text" class="form-control" name="guardian_nic" required>
