--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="#">Old Students Details</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/view_applicant_details">View Applicant Details</a>
+                <a class="nav-link" href="/applicant/view_applicant_details">View Applicant Details</a>
             </li>
         </ul>
     </nav>
