--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,7 +25,7 @@
     <script src="/angular/angular.min.js"></script>
     <script src="/typeahead/typeahead.js"></script>
 
-    {{_sections.scripts}}
+    {{{_sections.scripts}}}
 
 </body>
 </html>
