school database connection

--- a/views/schools/schoolindex.hbs
+++ b/views/schools/schoolindex.hbs
@@ -5,7 +5,7 @@
 
         <h4>Fill New School Details</h4>
 
-        <form action = "" method="post">
+        <form action = "/school_details" method="post">
 
             Name :
             <input type="text" name="school_name"><br/><hr>
