--- a/views/partials/sidebar_moe_officer.hbs
+++ b/views/partials/sidebar_moe_officer.hbs
@@ -11,6 +11,9 @@
             <a class="nav-link" href="/users/update">Update user</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="/users/remove">Remove user</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="/school">Register new schools</a>
         </li>
         <li class="nav-item">
