--- a/views/userremove.hbs
+++ b/views/userremove.hbs
@@ -6,6 +6,9 @@
 <div class="container">
     <br>
     <br>
+
+    <span id="faliureMessage">{{faliureMessage}}</span>
+
     <form class="form-signin" method="POST" action = "/users/remove" enctype="application/x-www-form-urlencoded">
         <h2 class="form-signin-heading">Remove a user</h2>
         <label for="usernm" class="sr-only">Username</label>
