--- a/views/applicant/view-applicant-details.hbs
+++ b/views/applicant/view-applicant-details.hbs
@@ -7,12 +7,36 @@
             <input type="submit" class="btn btn-default">
         </div>
     </form>
-    <button id="test">Click me!</button>
 </div>
-{{#section 'scripts'}}
-<script>
-$('#test').click(function(){
-    console.log('Clicked!');
-});
-</script>
-{{/section}}
+
+
+<div>
+    <table class="table table-striped table-bordered">
+        <thead class="thead-inverse">
+        <th>Applicant ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>DOB</th>
+        <th>age</th>
+        <th>nationality</th>
+        <th>religion</th>
+        <th>gender</th>
+        <th>Edit</th>
+        </thead>
+        <tbody>
+        {{#rows}}
+            <tr>
+                <td>{{applicant_id}}</td>
+                <td>{{first_name}}</td>
+                <td>{{last_name}}</td>
+                <td>{{formatDate date_of_birth}}</td>
+                <td>{{age}}</td>
+                <td>{{nationality}}</td>
+                <td>{{religion}}</td>
+                <td>{{gender}}</td>
+                <td><input type="button" value="Edit"></td>
+            </tr>
+        {{/rows}}
+        </tbody>
+    </table>
+</div>
