--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="#">School Qualified Letters</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/old_student_details">Old Students Details</a>
+                <a class="nav-link" href="/oldstudents">Old Students Details</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/applicant/view_applicant_details">View Applicant Details</a>
