--- a/views/users/school_clerk.hbs
+++ b/views/users/school_clerk.hbs
@@ -9,7 +9,7 @@
                 <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/guardian_details">Enter Applicant Details</a>
+                <a class="nav-link" href="/applicant/enter_details">Enter Applicant Details</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Interview Letters</a>
