--- a/views/applicant/applicant-school-details.hbs
+++ b/views/applicant/applicant-school-details.hbs
@@ -20,9 +20,9 @@
                 <label for="medium"> Medium </label>
                 <div class="dropdown" id="medium">
                     <select id="option_medium" name="medium"  data-component="dropdown">
-                        <option value="Sinhala"> Sinhala </option>
-                        <option value="English"> English </option>
-                        <option value="Tamil"> Tamil </option>
+                        <option value="S"> Sinhala </option>
+                        <option value="E"> English </option>
+                        <option value="T"> Tamil </option>
                     </select>
                 </div>
             </div>
