--- a/views/applicant/applicant-details.hbs
+++ b/views/applicant/applicant-details.hbs
@@ -5,6 +5,9 @@
     <div style="width: 60%; text-align: left; padding-left: 60px; padding-right: 66px;padding-bottom: 40px;" >
         <form action="/applicant_details" method="post">
             <div class="form-group">
+                <input type="hidden" class="form-control" name="guardian_nic" value={{nic}}>
+            </div>
+            <div class="form-group">
                 <label for="applicant_id" class="left">ID:</label>
                 <input type="number" class="form-control" name="applicant_id" required>
             </div>
