applicant_form_before_final_final :p

--- a/views/applicant/applicant-school-details.hbs
+++ b/views/applicant/applicant-school-details.hbs
@@ -8,7 +8,7 @@
             <div class="form-group">
                 <label for="school_name"> School </label>
                 <div class="dropdown" id="school_name">
-                    <select class="form-control" id="school_option">
+                    <select name="school_name" class="form-control" id="school_option">
                         {{#each dropdownValues}}
                             <option value="{{this.name}}">{{this.name}}</option>
                         {{/each}}
