old student personal details

--- a/views/oldstudents/oldstudents.hbs
+++ b/views/oldstudents/oldstudents.hbs
@@ -70,8 +70,8 @@
             Gender :
             <div class="religion_dev" id="religion">
                 <select id="religion_dropdown_id" name="gender"  data-component="dropdown">
-                    <option value = "Male">Male</option>
-                    <option value = "Female">Female</option>
+                    <option value = "M">Male</option>
+                    <option value = "F">Female</option>
                 </select>
             </div><br/><br/>
 
