--- a/views/school_insert.hbs
+++ b/views/school_insert.hbs
@@ -7,8 +7,15 @@
     <br><br>
     <form class="form-signin" method="POST" action = "/users/school_insert" enctype="application/x-www-form-urlencoded">
         <h2 class="form-signin-heading">Add user data</h2>
-        <label for="usernm" class="sr-only">School Name</label>
-        <input type="text" id="userID" class="form-control" name="school_name" placeholder="School Name" required autofocus>
+        <!--<label for="usernm" class="sr-only">School Name</label>-->
+        <!--<input type="text" id="userID" class="form-control" name="school_name" placeholder="School Name" required autofocus>-->
+        <div class="dropdown" id="school_name">
+            <select name="school_name" class="form-control" id="school_option">
+                {{#each rows}}
+                    <option value="{{this.name}}">{{this.name}}</option>
+                {{/each}}
+            </select>
+        </div>
         <br />
         <br />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Add User</button>
