--- a/views/userremove.hbs
+++ b/views/userremove.hbs
@@ -11,8 +11,17 @@
 
     <form class="form-signin" method="POST" action = "/users/remove" enctype="application/x-www-form-urlencoded">
         <h2 class="form-signin-heading">Remove a user</h2>
-        <label for="usernm" class="sr-only">Username</label>
-        <input type="text" id="usernm" class="form-control" name="username" placeholder="Username of the user" required autofocus>
+        <!--<label for="usernm" class="sr-only">Username</label>-->
+        <!--<input type="text" id="usernm" class="form-control" name="username" placeholder="Username of the user" required autofocus>-->
+
+        <div class="dropdown" id="school_name">
+            <select name="username" class="form-control" id="school_option">
+                {{#each rows}}
+                    <option value="{{this.username}}">{{this.username}}</option>
+                {{/each}}
+            </select>
+        </div>
+
         <br />
         <br />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Remove User</button>
