old student school details

--- a/views/oldstudents/oldstudents.hbs
+++ b/views/oldstudents/oldstudents.hbs
@@ -78,12 +78,14 @@
             Guardian NIC No :
             <input type="text" name="guardian_nic_no"><br/><hr>
 
-            <button type="submit" class="btn btn-primary" name = "btn_submit_old_student">Submit new school</button>
+            <button type="submit" class="btn btn-primary" name = "btn_submit_old_student">Submit</button>
+            <!--
             <button type="submit" class="btn btn-primary" name = "btn_cancel_old_student">Cancel</button>
+            -->
 
-        </form>
-    </main>
-    <!--/ Main page content-->
+         </form>
+     </main>
+     <!--/ Main page content-->
 
 </div>
 <br />
