--- a/views/users/school_admin.hbs
+++ b/views/users/school_admin.hbs
@@ -1,1 +1,46 @@
-SCHOOL ADMIN
+<!--SCHOOL CLERK'S PAGE-->
+
+<div class="row">
+
+    <!--Navbar-->
+    <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+        <ul class="nav nav-pills flex-column">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Overview <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/schooluser/selecting_applicant">Enter Interview Marks</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Interview Letters</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">School Qualified Letters</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/oldstudents">Old Students Details</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/applicant/view_applicant_details">View Applicant Details</a>
+            </li>
+        </ul>
+    </nav>
+    <!--/ Navbar-->
+
+    <!--Main page content-->
+    <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3 animated fadeIn">
+        <div class="jumbotron">
+            <div class="container">
+                <h1 style="text-align: center">Welcome, {{username}}</h1>
+                <small><p style="text-align: center">Grade One Entry Management System</p></small>
+                <p style="text-align: center">You can choose the operation that you want to perform from the sidebar.</p>
+                <span align="center"><p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p></span>
+            </div>
+        </div>
+    </main>
+    <!--/ Main page content-->
+
+</div>
+
+
+
