--- a/views/partials/sidebar_moe_officer.hbs
+++ b/views/partials/sidebar_moe_officer.hbs
@@ -25,6 +25,9 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Declare Grading Criteria</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/users/privileges">Change Privileges</a>
+        </li>
     </ul>
 </nav>
 <!--/ Navbar-->
