--- a/views/users/principal.hbs
+++ b/views/users/principal.hbs
@@ -16,6 +16,10 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link" href="/users/privileges_principle">Change Privileges</a>
+            </li>
+
+            <li class="nav-item">
                 <a class="nav-link" href="#">Grading Criteria <span class="sr-only">(current)</span></a>
             </li>
         </ul>
