--- a/views/partials/sidebar_moe_officer.hbs
+++ b/views/partials/sidebar_moe_officer.hbs
@@ -17,7 +17,7 @@
             <a class="nav-link" href="/school">Register new schools</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Remove Schools</a>
+            <a class="nav-link" href="/school/remove_school">Remove Schools</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Update School Details</a>
