--- a/views/partials/sidebar_moe_officer.hbs
+++ b/views/partials/sidebar_moe_officer.hbs
@@ -20,7 +20,7 @@
             <a class="nav-link" href="/school/remove_school">Remove Schools</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Update School Details</a>
+            <a class="nav-link" href="/school/update_school">Update School Details</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Declare Grading Criteria</a>
