added few nexts

--- a/views/oldstudents/oldstudents_school.hbs
+++ b/views/oldstudents/oldstudents_school.hbs
@@ -37,11 +37,14 @@
 
             <input type="hidden" name="admission_no" value={{adm_no}}><br/><br/>
 
+
             School Name :
             <input type="text" name="school_name"><br/><br/>
 
-            Date of Admission :
-            <input type="date" class="form-control" name="date_of_admission" required><br/>
+            <div class="form-group">
+                <label for="date_of_admission" class="left">Date of Admission</label>
+                <input type="date" class="form-control" name="date_of_admission" required>
+            </div>
 
             Medium :
             <div class="religion_dev" id="medium">
