add_new_student_check_f0r_7

--- a/views/users/principal.hbs
+++ b/views/users/principal.hbs
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="#">Interview Qualified List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Final Qualified List</a>
+                <a class="nav-link" href="/schooluser/view_selected_list">Final Qualified List</a>
             </li>
 
             <li class="nav-item">
