finished_guardian_problem

--- a/views/school_admin/enter-marks.hbs
+++ b/views/school_admin/enter-marks.hbs
@@ -10,6 +10,7 @@
         <input type="hidden" class="form-control" name="distance" value={{distance}}>
         <input type="hidden" class="form-control" name="school_id" value={{school_id}}>
         <input type="hidden" class="form-control" name="marks_for_distance" value={{marks_for_distance}}>
+        <input type="hidden" class="form-control" name="guardian_nic" value={{guardianNic}}>
         <div class="form-group">
             <label for="sibling_id" class="left">Index Number of a Sibling (If any)</label>
             <input type="number" class="form-control" name="sibling_id">
